# headless-siem

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  NORMALIZATION_PROMPT.md  NOTES.md  PLAN.md  README.md  dev.sh  justfile
.claude/skills/siemctl/: SKILL.md
.claude/skills/siemctl/references/: flags.md  parser-chain.md
config/: correlations.toml  digest.toml  normalized.toml  sources.toml  sshd-session_parser.toml
config/notify/: alert-watch.sh
config/rsyslog.d/: 50-headless-siem.conf
config/rules/: cron-suspicious-command.yml  firewall-port-scan.yml  haproxy-connect-volume.yml  haproxy-tls-probe.yml  iptables-deny.yml  local-auth-failure.yml  prompt-injection-log-fields.yml  ssh-brute-force.yml  ssh-login-success.yml  sudo-execution.yml  sudo-privilege-escalation.yml  suppress.toml  suspicious-ssh.yml
config/systemd/: headless-siem-alert-watch.service  headless-siem-correlated.service  headless-siem-indexd.service  headless-siem-normalized.service  headless-siem-pipes.service  headless-siem-retention.service  headless-siem-retention.timer  headless-siem-ruled.service  install.sh  uninstall.sh
docs/: config-merge-proposal.md  design-digest-command.md  design-llm-soc-analyst.md  design-storage-compaction.md  design-unified-query.md  forwarding-to-normalized.md  guide-detection-rules.md  guide-testing-correlated.md  guide-verifying-indexing.md  normalized-usage.md  normalized-writing-parsers.md  roadmap-soc-improvements.md  user-guide.md
docs/design/: design-digest-command.md  design-llm-soc-analyst.md  design-storage-compaction.md  roadmap-soc-improvements.md
docs/detections/: 1001-ssh-brute-force.md  1002-sudo-execution.md  1003-iptables-deny.md  1004-suspicious-ssh.md  1005-ssh-login-success.md  1006-cron-suspicious-command.md  1007-haproxy-tls-probe.md  1008-sudo-privilege-escalation.md  1009-firewall-port-scan.md  1010-local-auth-failure.md  README.md  cred-brute-force-success.md  external-ssh-then-sudo.md  port-scan.md  sustained-brute-force.md
scripts/: check-deploy-drift  redeploy-binary  soc-restart-pipeline
src/correlated/: Cargo.toml
src/correlated/src/: config.rs  correlation.rs  main.rs  output.rs
src/correlated/tests/: integration.rs
src/indexd/: Cargo.toml
src/indexd/src/: config.rs  db.rs  main.rs  parser.rs
src/normalized/: Cargo.toml
src/normalized/src/: config.rs  envelope.rs  event.rs  extract.rs  main.rs  output.rs
src/normalized/src/parsers/: cef.rs  csv.rs  filterlog.rs  json.rs  leef.rs  logfmt.rs  mod.rs  plain.rs  rfc3164.rs  rfc5424.rs  xml.rs  yaml.rs
src/ruled/: Cargo.toml
src/ruled/src/: main.rs  output.rs  rules.rs  suppress.rs
src/siemctl/: Cargo.toml
src/siemctl/src/: alerts.rs  db.rs  digest.rs  digest_config.rs  digest_query.rs  digest_render.rs  main.rs  normconfig.rs  query.rs  render.rs  sources.rs  time.rs
tests/detections/: lib.sh  run-all.sh  test-1001-ssh-brute-force.sh  test-1002-sudo-execution.sh  test-1003-iptables-deny.sh  test-1004-suspicious-ssh.sh  test-1005-ssh-login-success.sh  test-1006-cron-suspicious-command.sh  test-1007-haproxy-tls-probe.sh  test-1008-sudo-privilege-escalation.sh  test-1009-firewall-port-scan.sh  test-1010-local-auth-failure.sh  test-corr-cred-brute-force-success.sh  test-corr-external-ssh-then-sudo.sh  test-corr-port-scan.sh  test-corr-sustained-brute-force.sh
tests/integration/: test-alert-watch.sh  test-indexd.sh  test-normalized.sh  test-pipeline.sh  test-ruled-suppress.sh  test-ruled.sh  test-siemctl-alerts.sh  test-siemctl-digest.sh  test-siemctl-group.sh  test-siemctl-stats.sh
