[package]
name = "correlated"
version = "0.1.0"
edition = "2021"
description = "Alert correlation engine for headless-siem — stdin alert JSONL → stdout correlation alerts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
walkdir = "2"
