[package]
name = "indexd"
version = "0.1.0"
edition = "2021"
description = "Headless SIEM — filesystem watcher and SQLite indexer"

[dependencies]
inotify = "0.11"
libc = "0.2"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
toml = "0.8"
