[package]
name = "ruled"
version = "0.1.0"
edition = "2021"
description = "Sigma rule engine for headless-siem — stdin JSONL → stdout alerts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
