[package]
name = "siemctl"
version = "0.1.0"
edition = "2021"
description = "Headless SIEM — search and management CLI"

[[bin]]
name = "siemctl"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
